<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lime_1"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/backLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_arrow_left"
        android:drawablePadding="6dp"
        android:gravity="start"
        android:text="@string/settings_back"
        android:textColor="@color/lime_10"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/carbon_emission_tracker_title"
        android:textColor="@color/lime_10"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/in_development"
        android:textColor="@color/lime_8"
        android:textSize="18sp" />
</LinearLayout>
